--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title= title
+    link(rel='stylesheet', href='http://design-docs.trexcloud.com/css/nimatron.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
